[tool.poetry]
name = "model-bias-experiments"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.hilgart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
keras = "^2.4.3"
sklearn = "^0.0"
tensorflow = "^2.3.1"
tensorflow_datasets = "^4.1.0"
python-mnist = "^0.7"
seaborn = "^0.11.0"
num2words = "^0.5.10"
jupyter = "^1.0.0"
lab = "^6.2"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.9"
tqdm = "^4.54.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
